@@ -98,7 +98,7 @@ function ecgpuwave(varargin)
        A String specifying the ouput annotator name (default = 'edr').
 
  Wrapper written by Ikaro Silva, 2013
- Last Modified: January 12 , 2014
+ Last Modified: February 18 , 2014
  Version 0.0.1
 
  
