@@ -23,7 +23,7 @@ This script will test the installation of the WFDB Application Toolbox
 
  Written by Ikaro Silva, 2013
 
- Version 1.0
+ Version 1.1
  Since 0.0.1
 
  See also wfdb, rdsamp
